add some thing to contact and insurance pages

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -159,21 +159,23 @@ section  h3{
 .btn-style{
    color: whitesmoke;
    background-color: var(--primary-container);
-   border-color: transparent;
    border-radius: 0.25rem;
    opacity: 90%;
+   transition: 0.3s;
 
   }
   .btn-style:hover{
    color: white;
-   opacity: 100%;
-   background-color: #43E094;
-   border-color: transparent;
+   opacity: 90%;
+   border: #36b276 solid 1px;
+   background-color: var(--primary-container);
+   /* border-color: transparent; */
   }
   .btn-style:focus{
    color: white !important;
    background-color: #43E094 !important;
-   border-color: #43E094 !important;
+   opacity: 100%;
+
   }
  
  footer {
@@ -222,4 +224,8 @@ section.rentCar{
 }
 .insurance-hero {
   background-image: url("https://source.unsplash.com/random/?black");
+}
+
+.helpHero{
+  background-image: url("https://source.unsplash.com/random/?help");
 }
