--- a/templates/home.html
+++ b/templates/home.html
@@ -14,8 +14,8 @@
                 <input type="text" class="form-control mb-3" name="place"
                     placeholder="Enter an address, a train station..." id="place">
             </div>
-            <div class="row mb-3">
-                <div class="col-md-6">
+            <div class="row">
+                <div class="col-md-6 mb-3">
                     <input class="form-control" placeholder="Start of rental" onfocus="(this.type='date')"
                         onblur="(this.type='text')" type="text" name="date" id="date">
                 </div>
@@ -24,7 +24,7 @@
                         onblur="(this.type='text')" name="date" id="date">
                 </div>
             </div>
-            <button class="btn btn-outline-seconday btn-style col-md-12" type="submit">
+            <button class="btn btn-outline-seconday btn-style col-md-12 sm-mt-3" type="submit">
                 <i class="bi bi-search"></i>
                 &ThickSpace; Search</button>
         </form>
