--- a/templates/insurance.html
+++ b/templates/insurance.html
@@ -52,7 +52,7 @@
                                     the vehicle or at any time before the start of the rental period</p>
                             </div>
                         </div>
-                        <a href="" class="btn btn-dark m-auto">Find out more</a>
+                        <a href="" class="btn btn-style w-50 m-auto">Find out more</a>
                     </div>
                 </div>
             </div>
@@ -89,7 +89,7 @@
                                     automatically entitled to 0 kilometer 24/7 assistance.</p>
                             </div>
                         </div>
-                        <a href="" class="btn btn-dark m-auto">Find out more</a>
+                        <a href="" class="btn w-50 m-auto btn-style">Find out more</a>
 
                     </div>
                 </div>
@@ -100,6 +100,76 @@
 </div>
 <!-- ========== End Guest and host insurance section ========== -->
 <!-- ========== Start FAQ ========== -->
+<div class="container p-5">
+    <div class="accordion" id="accordionExample">
+        <div class="accordion-item">
+            <h2 class="accordion-header">
+                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
+                    aria-expanded="true" aria-controls="collapseOne">
+                    What happens if there's an accident?
+                </button>
+            </h2>
+            <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam, recusandae placeat? Fuga provident
+                    ut perferendis officiis, facilis iusto rem illo amet deleniti eaque debitis delectus sequi
+                    necessitatibus exercitationem aliquid alias modi vero harum deserunt magni ratione sapiente ullam
+                    facere? Fugiat sint eius eligendi distinctio suscipit. Suscipit, recusandae error. Reprehenderit
+                    sequi rem culpa, soluta quos fuga eius accusamus! Corporis ratione sed optio laudantium fuga fugiat
+                    dolores a?
+                </div>
+            </div>
+        </div>
+        <div class="accordion-item">
+            <h2 class="accordion-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    What is the insurance "deductible?"
+                </button>
+            </h2>
+            <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi deserunt minima obcaecati, atque
+                    eligendi placeat rerum fugiat deleniti non, repudiandae, adipisci itaque cupiditate mollitia quasi
+                    assumenda! Tempora provident enim laboriosam quos, aliquam facilis dolorem officia! Non numquam
+                    nesciunt enim unde soluta quia facere.
+                </div>
+            </div>
+        </div>
+        <div class="accordion-item">
+            <h2 class="accordion-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                    Additional insurance and assistance options
+                </button>
+            </h2>
+            <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo quae libero numquam
+                    dolorem, blanditiis ea excepturi eos. Debitis totam nihil beatae officia aperiam aliquam quos at
+                    unde nostrum corporis, reiciendis ipsum minus qui provident excepturi adipisci sint, nisi
+                    corrupti. Deleniti vel corporis saepe, non rerum harum consequatur facere molestiae voluptatem
+                    doloribus quidem itaque explicabo! Voluptatum?
+                </div>
+            </div>
+        </div>
+        <div class="accordion-item">
+            <h2 class="accordion-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                    What should I do if the car breaks down?
+                </button>
+            </h2>
+            <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, quibusdam ea nulla culpa
+                    officia quam praesentium tempora voluptatem nisi eveniet quis? Consectetur, adipisci veritatis nisi
+                    accusantium maxime natus nemo dolorem.
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 <!-- ========== End FAQ ========== -->
 
