--- a/templates/help.html
+++ b/templates/help.html
@@ -2,5 +2,31 @@
 
 {% block title %}Help{% endblock %}
 {% block content %}
-<h1>Help</h1>
+<div class="helpHero">
+    <div class="container p-5 ">
+        <form action="" class="row align-items-center justify-content-center">
+            <div class="col-auto">
+                <input type="text" class="form-control-lg" style="width: 500PX;"
+                    placeholder="Insurance, additional driver, extension...">
+            </div>
+            <div class="col-auto">
+                <button type="submit" class="btn btn-primary" role="search"><i class="bi bi-search me-2"></i>
+                    Search</button>
+            </div>
+        </form>
+    </div>
+
+</div>
+<div class="links p-5">
+    <div class="container">
+        <h4 class="text-danger">Eligibility and General Terms and Conditions of Use and Sale</h4>
+        <a href="" class="d-block my-3 text-black text-decoration-none">Information about my data</a>
+        <a href="" class="d-block my-3 text-black text-decoration-none">General Conditions of Use</a>
+        <a href="" class="d-block my-3 text-black text-decoration-none">OuiCar Connect Specific Conditions of Use</a>
+        <a href="" class="d-block my-3 text-black text-decoration-none">Specific Conditions of Use (country :
+            Morocco)</a>
+        <a href="" class="d-block my-3 text-black text-decoration-none">Legal notices</a>
+        <a href="" class="d-block my-3 text-black text-decoration-none">Privacy policy</a>
+    </div>
+</div>
 {% endblock %}
