--- a/templates/help.html
+++ b/templates/help.html
@@ -6,20 +6,20 @@
     <div class="container p-5 ">
         <form action="" class="row align-items-center justify-content-center">
             <div class="col-auto">
-                <input type="text" class="form-control-lg" style="width: 500PX;"
+                <input type="text" class="form-control" style="width: 500PX;"
                     placeholder="Insurance, additional driver, extension...">
             </div>
             <div class="col-auto">
-                <button type="submit" class="btn btn-primary" role="search"><i class="bi bi-search me-2"></i>
+                <button type="submit" class="btn btn-style" role="search"><i class="bi bi-search me-2"></i>
                     Search</button>
             </div>
         </form>
     </div>
 
 </div>
-<div class="links p-5">
-    <div class="container">
-        <h4 class="text-danger">Eligibility and General Terms and Conditions of Use and Sale</h4>
+<div class="links p-5 mx-5">
+    <div class="container ">
+        <h4 class="" style="color: #43E094;">Eligibility and General Terms and Conditions of Use and Sale</h4>
         <a href="" class="d-block my-3 text-black text-decoration-none">Information about my data</a>
         <a href="" class="d-block my-3 text-black text-decoration-none">General Conditions of Use</a>
         <a href="" class="d-block my-3 text-black text-decoration-none">OuiCar Connect Specific Conditions of Use</a>
@@ -28,5 +28,11 @@
         <a href="" class="d-block my-3 text-black text-decoration-none">Legal notices</a>
         <a href="" class="d-block my-3 text-black text-decoration-none">Privacy policy</a>
     </div>
+</div>
+<div class="container pb-5 text-center ">
+    <p class="fw-bold ">Join us at</p>
+    <a href=""><i class="bi bi-instagram text-dark mx-1 px-1"></i></a>
+    <a href=""><i class="bi bi-twitter text-dark mx-1 px-1"></i></a>
+    <a href=""><i class="bi bi-facebook text-dark mx-1 px-1"></i></a>
 </div>
 {% endblock %}
