--- a/templates/home.html
+++ b/templates/home.html
@@ -172,4 +172,23 @@
     </div>
 
 </section>
+<section class="moreInfo p-4">
+    <div class="container">
+        <div class="row justify-content-center align-items-center g-2">
+            <div class="col card shadow-sm p-4 m-3">
+                <h4>Any questions?</h4>
+                <p>Our team is available seven days a week
+                    at <a href="mailto: contact@cricars.com" class="text-decoration-none">
+                        <span style="color: #43E094;">contact@cricars.com</span></p>
+                </a>
+            </div>
+            <div class="col p-4 shadow-sm card m-3">
+                <h4>All rentals are insured by XXX</h4>
+                <p>Insurance included in the price. Multi-risk accident and theft coverage. 24-hour breakdown assistance
+                    for all vehicles.</p>
+            </div>
+        </div>
+
+    </div>
+</section>
 {% endblock %}
