--- a/templates/signup.html
+++ b/templates/signup.html
@@ -21,14 +21,16 @@
   <div class="form-check mt-3">
     <input class="form-check-input" required type="checkbox" value="" id="defaultCheck1">
     <label class="form-check-label lato-regular" for="defaultCheck1">
-      I have read and agree to the
-      <a href="#" target="_blank" class="a-color">privacy policy </a>
+      By creating an account, I confirm that I have read and accept Cricars’s General Terms and Conditions, the
+      <a href="#" target="_blank" class="a-color">Confidentiality Policy</a> and the <a href="#" target="_blank"
+        class="a-color">Cookies Policy </a>.
+
     </label>
   </div>
   <button type="submit" class="btn col-12 my-3 btn-style">
     <i class="bi bi-person-add mx-2"></i>
     Sign-up</button>
-  <p class="lato-regular ">Already have an account?
+  <p class="lato-regular ">Already a Cricars member?
     <a class="a-color" href="/login">Log in here</a>
   </p>
 
