--- a/templates/base.html
+++ b/templates/base.html
@@ -48,7 +48,7 @@
 
     {% block content %}{% endblock %}
     <!-- start footer -->
-    <footer>
+    <footer class="">
         <div class="container">
             <div class="row">
                 <div class="col-md-3 col-sm-6 footer-section">
@@ -59,39 +59,38 @@
                             fill="white" />
                     </svg>
 
-                    <p><a href="/about">Who are we?</a></p>
-                    <p><a href="#">Join Us</a></p>
-                    <p><a href="#">press and pub</a></p>
-                    <p><a href="#">blog</a></p>
+                    <p><a href="/about" class="text-decoration-none">Who are we?</a></p>
+                    <p><a href="#" class="text-decoration-none">Join Us</a></p>
+                    <p><a href="#" class="text-decoration-none">Press and pub</a></p>
+                    <p><a href="#" class="text-decoration-none">Blog</a></p>
                     <p>
                         <a href="https://web.facebook.com/el.walid.bousmaha/" target="_blank"><i
-                                class="fa-brands fa-facebook"></i></a>
+                                class="bi bi-facebook"></i></a>
                         <a href="https://www.instagram.com/el.walid.bousmaha" target="_blank"><i
-                                class="fa-brands fa-instagram"></i></a>
-                        <a href="https://twitter.com/EBousmaha" target="_blank"> <i
-                                class="fa-brands fa-twitter"></i></a>
+                                class="bi bi-instagram"></i></a>
+                        <a href="https://twitter.com/EBousmaha" target="_blank"> <i class="bi bi-twitter"></i></a>
                     </p>
 
                 </div>
                 <div class="col-md-3 col-sm-6 footer-section">
                     <h4>Host</h4>
-                    <p><a href="#">Why rent your car?</a></p>
-                    <p><a href="insurance">Insurance</a></p>
-                    <p><a href="#">Your rental experience</a></p>
-                    <p><a href="#">Tips</a></p>
-                    <p><a href="#">Professionals</a></p>
+                    <p><a href="# " class="text-decoration-none">Why rent your car?</a></p>
+                    <p><a href="insurance" class="text-decoration-none">Insurance</a></p>
+                    <p><a href="#" class="text-decoration-none">Your rental experience</a></p>
+                    <p><a href="#" class="text-decoration-none">Tips</a></p>
+                    <p><a href="#" class="text-decoration-none">Professionals</a></p>
                 </div>
                 <div class="col-md-3 col-sm-6 footer-section">
                     <h4>Guest</h4>
-                    <p><a href="#">Rental</a></p>
-                    <p><a href="">experience</a></p>
-                    <p><a href="insurance">Insurance</a></p>
-                    <p><a href="#">Tips</a></p>
+                    <p><a href="#" class="text-decoration-none" class="text-decoration-none">Rental</a></p>
+                    <p><a href="" class="text-decoration-none" class="text-decoration-none">Experience</a></p>
+                    <p><a href="insurance" class="text-decoration-none" class="text-decoration-none">Insurance</a></p>
+                    <p><a href="#" class="text-decoration-none" class="text-decoration-none">Tips</a></p>
                 </div>
                 <div class="col-md-3 col-sm-6 footer-section">
                     <h4>Help</h4>
-                    <p><a href="#">FAQ</a></p>
-                    <p><a href="/contact">contact us</a></p>
+                    <p><a href="#" class="text-decoration-none">FAQ</a></p>
+                    <p><a href="/contact" class="text-decoration-none">Contact us</a></p>
                     <!-- start dropdown -->
                     <div class="dropdown">
                         <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
@@ -106,12 +105,12 @@
                         </div>
                     </div>
                     <!-- start dropdown -->
-
-
                 </div>
                 <div class="col-md-6 footer-section">
-
-                    <p>© CRICARS, Inc. All rights reserved. Confidentiality Policy</p>
+                    <p><i class="bi bi-c-circle"></i> CRICARS, SARL. All rights reserved. <a href=""
+                            class="text-decoration-none">Confidentiality
+                            Policy</a>
+                    </p>
                 </div>
                 <div class="col-md-6 footer-section">
                     <!-- ========== Start app store badge ========== -->
