--- a/templates/help.html
+++ b/templates/help.html
@@ -31,8 +31,10 @@
 </div>
 <div class="container pb-5 text-center ">
     <p class="fw-bold ">Join us at</p>
-    <a href=""><i class="bi bi-instagram text-dark mx-1 px-1"></i></a>
-    <a href=""><i class="bi bi-twitter text-dark mx-1 px-1"></i></a>
-    <a href=""><i class="bi bi-facebook text-dark mx-1 px-1"></i></a>
+    <a href="https://web.facebook.com/el.walid.bousmaha/" target="_blank"><i
+            class="bi bi-facebook text-dark mx-1 px-1"></i></a>
+    <a href="https://www.instagram.com/el.walid.bousmaha" target="_blank"><i
+            class="bi bi-instagram text-dark mx-1 px-1"></i></a>
+    <a href="https://twitter.com/EBousmaha" target="_blank"><i class="bi bi-twitter text-dark mx-1 px-1"></i></a>
 </div>
 {% endblock %}
