--- a/templates/rental.html
+++ b/templates/rental.html
@@ -62,7 +62,68 @@
             </div>
         </div>
     </div>
+    <div class="container px-5">
+        <h4>About the vehicle</h4>
+        <p>FIAT 500</p>
+    </div>
+    <!-- start car info -->
+    <div class="container px-5">
+        <div class="table">
+            <table class="table table-striped ">
+                <tbody>
+                    <tr class="">
+                        <td scope="row">Year</td>
+                        <td>2011</td>
+                    </tr>
+                    <tr class="">
+                        <td scope="row">Power</td>
+                        <td>Gaz</td>
+                    </tr>
+                    <tr class="">
+                        <td scope="row">Mileage</td>
+                        <td>150,000 - 175,000 kms</td>
+                    </tr>
+                    <tr class="">
+                        <td scope="row">Number of doors</td>
+                        <td>2</td>
+                    </tr>
+                    <tr class="">
+                        <td scope="row">Transmission</td>
+                        <td>Manual</td>
+                    </tr>
+                    <tr class="">
+                        <td scope="row">Number of seats</td>
+                        <td>4</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
 
+    </div>
+
+    <!-- start car info -->
+    <!-- ========== Start Equipment ========== -->
+    <div id="equipment" class="container px-5 pb-5">
+        <h3 class="">Equipment</h3>
+        <div class="equipmentList">
+            <span>Child seat</span>
+            <span>USB charger</span>
+            <span>Air conditioning</span>
+            <span>ABS</span>
+        </div>
+    </div>
+    <!-- ========== End Equipment ========== -->
+    <!-- start Requirements -->
+    <div id="requirements" class="container px-5 pb-5">
+        <h3>Requirements</h3>
+        <div class="requirementsList row">
+            <span class="col-2">18 years old minimum</span>
+            <span class="col-2">Valid licence</span>
+            <span class="col-2">Owns a driver license for over 3 years</span>
+            <span class="col-2">Vehicle use in Morocco and border countries</span>
+        </div>
+    </div>
+    <!-- End Requirements -->
 
 </div>
 {% endblock %}
