working on data base --- need to change login to logout wjen the user in loged in

--- a/templates/login.html
+++ b/templates/login.html
@@ -5,8 +5,17 @@ Login
 {% endblock %}
 
 {% block content %}
+{% with messages = get_flashed_messages() %}
+{% if messages %}
+    <ul>
+        {% for message in messages %}
+            <li>{{ message }}</li>
+        {% endfor %}
+    </ul>
+{% endif %}
+{% endwith %}
 <h2 class="display-4 text-center">Welcome Back</h2>
-<form id="signupForm" action="/login" method="post" class="w-50">
+<form id="signupForm" action="{{ url_for('login') }}" method="post" class="w-50">
     <input class="form-control my-3 " placeholder="Email" type="email" id="validationCustom01" name="email" required>
     <input class="form-control my-3 " placeholder="Password" type="password" id="password" name="password" required="">
     <p class="lato-regular">Forgot password?
