--- a/templates/base.html
+++ b/templates/base.html
@@ -32,19 +32,25 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/rentmycar">Rent my car</a>
                 </li>
+                {% if authenticated %}
+                <li class="nav-item">
+                    <a class="nav-link" href="/logout">Log out</a>
+                </li>
+                {% else %}
                 <li class="nav-item">
                     <a class="nav-link" href="/signup">Sign Up</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/login">Log in</a>
                 </li>
+                {% endif %}
                 <li class="nav-item">
                     <a class="nav-link" href="/help">Help</a>
                 </li>
             </ul>
         </div>
     </nav>
-
+    
 
     {% block content %}{% endblock %}
     <!-- start footer -->
