--- a/templates/signup.html
+++ b/templates/signup.html
@@ -6,11 +6,13 @@
 
 <h2 class="display-4 text-center">Welcome Aboard</h2>
 
-{% with messages = get_flashed_messages(with_categories=true) %}
+{% with messages = get_flashed_messages() %}
 {% if messages %}
-    {% for category, message in messages %}
-        <div class="{{ category }}">{{ message }}</div>
-    {% endfor %}
+    <ul>
+        {% for message in messages %}
+            <li>{{ message }}</li>
+        {% endfor %}
+    </ul>
 {% endif %}
 {% endwith %}
 <form id="signupForm" action="{{ url_for('signup') }}" method="POST" class="w-50">
