--- a/templates/resetpassword.html
+++ b/templates/resetpassword.html
@@ -4,12 +4,15 @@
 {% block content %}
 <h2 class="display-4 text-center text-capitalize">reset password</h2>
 
-<form action="" class="w-50">
-    <input type="email" name="email" id="email" class="form-control" placeholder="Email">
-    <button class="btn  btn-style col-12 my-3" type="submit">
-        <i class="bi bi-send"></i>
-        Send verification link
-    </button>
+<form action="{{ url_for('resetpassword') }}" method="post" class="w-50">
+
+    {{ form.hidden_tag() }}
+    {{ form.email (class_="form-control", size=64)}}
+    <div class="mt-3">
+
+        {{ form.submit (class_= "btn btn-style col-12") }}
+      </div>
+
     <p class="lato-regular">Don't have an account? <a href="/signup">Create one here</a></p>
 
 </form>
